Add uuid filter
